# air-fit-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.MD  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py  schemas.py  scoring.py
app/api/: routes_analyze.py  routes_companies.py
app/llm/: claude_client.py  fit_analysis.py
app/scrape/: browser.py  careers.py  extractors.py  signals.py
app/services/: batch_runner.py  exporters.py  pipeline.py
app/utils/: logger.py  text_cleaning.py  url_helpers.py
dashboard/: package-lock.json
dashboard/src/app/: App.tsx  types.ts
dashboard/src/app/api/: client.ts
dashboard/src/app/components/: AnalyzeDialog.tsx  CompanyDetail.tsx  CompanySidebar.tsx  ControlBar.tsx  EmptyState.tsx
dashboard/src/imports/: DASHBOARD_SPEC.md  PRD.md  sample_companies.json  sample_company.json
data/: sample_domains.csv  scoring_rubric.json
prompts/: fit_analysis_system.md  fit_analysis_user_template.md
scripts/: run_batch.py
tests/: test_extractors.py  test_fit_schema.py  test_scoring.py  test_signals.py
