[project]
name = "air-fit-signal-engine"
version = "0.1.0"
description = "Internal GTM tool prototype for scoring company fit for Air"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "pandas>=2.2.0",
  "playwright>=1.52.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
  "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"